--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-5.31MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-3.08MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-5.71MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.02MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 16a6617b-2c13-4473-9f8f-9606c9d9a0d4}
-  - {name: 🇨🇭 瑞士-435.0KB/s(Youtube:不良林), server: ch1.nodegz.top, port: 1400, type: trojan, password: b6f47fcf-6195-38d4-8f49-9e5ccd6bd8f1, sni: ch1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.01MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.86MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 2df8cb33-de40-438c-840a-5f1d05fe7518, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇰🇷 韩国-3.33MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.68MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 12353, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
+  - {name: 🇨🇳 中国-7.33MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 1cb6f041-a1b4-4d6b-b72c-bcb879e1017d}
   - {name: 🇺🇸 美国-5.83MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-318.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-729.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-344.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
       - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.02MB/s(Youtube:不良林)
-      - 🇨🇭 瑞士-435.0KB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.86MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.33MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
+      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
