--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.31MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.34MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇦 加拿大-3.68MB/s(Youtube:不良林), server: usyy.884899.cf, port: 443, type: trojan, password: 2debb06b-95ce-4e9b-956a-6cf7cadac30c, sni: usyy.884899.cf, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: bpjchongkong.kozow.com, port: 12353, type: vmess, uuid: 546660e6-01ad-4eaa-a640-83864829f8f9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /images, ws-headers: {Host: bpjchongkong.kozow.com}}
-  - {name: 🇨🇳 中国-7.33MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 1cb6f041-a1b4-4d6b-b72c-bcb879e1017d}
-  - {name: 🇺🇸 美国-5.83MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-318.1KB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-729.2KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-19.23MB/s(Youtube:不良林), server: 36.139.154.162, port: 45149, type: vmess, uuid: 25066212-3c68-4f60-9845-80632aa27a20, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.162}}
+  - {name: 🇩🇪 德国-3.00MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-14.81MB/s(Youtube:不良林), server: 36.134.116.212, port: 45149, type: vmess, uuid: 60ee343c-6574-43ba-9f89-26ba2a154999, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.134.116.212}}
   - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-344.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-10.41MB/s(Youtube:不良林), server: ntw02.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw02.vsvideo.live, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: 36.139.154.17, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 438eb205-b45d-48bf-aec1-c1587b581ea0}
+  - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.31MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.83MB/s(Youtube:不良林)
-      - 🇯🇵 日本-318.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-729.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
       - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
