--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-19.23MB/s(Youtube:不良林), server: 36.139.154.162, port: 45149, type: vmess, uuid: 25066212-3c68-4f60-9845-80632aa27a20, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.139.154.162}}
-  - {name: 🇩🇪 德国-3.00MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-2.67MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-14.81MB/s(Youtube:不良林), server: 36.134.116.212, port: 45149, type: vmess, uuid: 60ee343c-6574-43ba-9f89-26ba2a154999, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 36.134.116.212}}
-  - {name: 🇺🇸 美国-4.82MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-344.5KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.46MB/s(Youtube:不良林), server: 36.134.116.212, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 1cb6f041-a1b4-4d6b-b72c-bcb879e1017d}
+  - {name: 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇸🇬 新加坡-3.60MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.21MB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20720, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.30MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 台湾-10.41MB/s(Youtube:不良林), server: ntw02.vsvideo.live, port: 25634, type: trojan, password: a2a37460-2a05-3211-b0d6-d0b37971f84e, sni: ntw02.vsvideo.live, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: 36.139.154.17, port: 45392, type: ss, cipher: chacha20-ietf-poly1305, password: 438eb205-b45d-48bf-aec1-c1587b581ea0}
   - {name: 🇺🇸 美国-5.77MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-343.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-sp1, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
+  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-19.23MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.00MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-344.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.46MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-971.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.30MB/s(Youtube:不良林)
       - 🇨🇳 台湾-10.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
